# Plant_disease_pred_CNN

./: .dockerignore.txt  .gitignore.txt  Dockerfile  README.md  app.py  config.toml  pyproject.toml  requirements.txt
trained_model/: trained_mode.txt
